Sat Jan 13 14:31:10 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/AlternateIIOP/run_test.pl:
        * tests/Parallel_Connect_Strategy/run_test.pl:

          Renumbered the port values passed to the server. I noticed the
          PCS test on one nightly machine failed because the acceptor
          couldn't open a new socket. Also corrected a cut & paste error
          in the scripts.

Fri Jan 12 21:40:13 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Oneway_Timeouts/client.cpp:

          Replaced the final invocation used to signal a shutdown to the
          server as this is a two-way call that was using the same
          timeout-enabled reference as the test. This sometimes caused
          spurious timeout errors that are then reported as failures even
          though they are not.

        * tests/run_test.pl:

          Increased the process start-up timeout as the old values were
          short enough that the script assumed an error even though the
          processes were actually running. On busy systems, a 2 or 5
          second delay is really possible, particularly if shared
          libraries have to be reloaded or the system is just busy.

Fri Jan 12 20:50:38 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicAny.mpc:

          Reordered the source files, which will likewise reorder the
          linking of object files on builds using makefiles. Thanks
          to Ossama Othman <Ossama.Othman@symantec.com> for this
          suggestion to try and eliminate the Debian linking errors
          in DynamicAny.

Fri Jan 12 17:23:07 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:

          Modified call to make_dyn_any_t() to be consistent with
          changes in

          Thu Jan 11 18:42:33 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>
